--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Regular styles for all screens */
 body {
     margin: 0;
     padding: 100px;
@@ -23,9 +24,6 @@ p, li {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     line-height: 1.25;
 
-    /* .emoji{
-        font-family: 'Noto Color Emoji', sans-serif;
-    } */
 }
 span.emoji{
     font-family: 'Noto Color Emoji', sans-serif;
@@ -49,6 +47,39 @@ div.project {
         display: flex;
     }
 }
+iframe {
+    width: 100%;
+    height: 450px;
+}
   
-  /* Add your styles here */
+
+/* Media query for screens with a maximum width of 767px (typical for mobile devices) */
+@media only screen and (max-width: 767px) {
+    /* Add any other mobile-specific styles */
+    body {
+        padding: 20px;
+    }
+    iframe {
+        height: 300px;
+    }
+
+}
+  
+/* Media query for screens between 768px and 1023px (tablet landscape) */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    /* Add any other tablet-specific styles */
+    body {
+        padding: 20px;
+    }
+    iframe {
+        height: 300px;
+    }
+
+}
+  
+/* Media query for screens 1024px and larger (desktop) */
+ @media only screen and (min-width: 1024px) {
+    /* Add any other desktop-specific styles */
+
+ }
   
