--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,61 @@ body {
 
 }
 
+header {
+    /* position: relative; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Hamburger menu styles */
+.hamburger-menu {
+    height: 64px;
+    width: 64px;
+    background-image: url('assets/noun-hamburger.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    
+}
+
+nav {
+    display: none; /* Hide the navigation for smaller screens */
+    /* position: absolute;
+    top: 60px;
+    right: 0; */
+}
+
+nav.active {
+    display: flex; /* Show the navigation when active (toggled) */
+    /* flex-direction: row-reverse; */
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    /* margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-end; */
+}
+
+nav li {
+    margin: 0 15px;
+    text-align: right;
+}
+
+nav a {
+    text-decoration: none;
+    /* font-weight: bold; */
+}
+
+
 h1, h2 {
     color: #0D093B;
     font-family: 'Playfair Display', serif;
@@ -39,6 +94,7 @@ a {
     /* color: #590696; Looks like a visited link */
     color: #C70A80;
 }
+
 div.project {
     border-bottom: 1px #1e3f3f solid;
     padding-bottom: 20px;
