--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 100px;
     background-color: #fcfbfa;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 
 }
 
@@ -89,7 +90,7 @@ h2 {
 
 p, li {
     color: #1c1c1c;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    /*font-family: 'Open Sans', Arial, Helvetica, sans-serif;*/
     line-height: 1.25;
 
 }
@@ -106,6 +107,18 @@ p.tag {
 a {
     /* color: #590696; Looks like a visited link */
     color: #C70A80;
+    cursor: pointer;
+}
+
+button {
+    border: none;
+    background: none;
+    padding: 0;
+    color: #C70A80;
+    font-size: 1em;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    cursor: pointer;
+
 }
 
 div.project, div.detail {
